# robocorp_adapters_custom

./: .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  MANIFEST.in  PACKAGE_CONVERSION_SUMMARY.md  README.md  USAGE_EXAMPLES.md  __init__.py  _docdb.py  _redis.py  _sqlite.py  _utils.py  docdb_adapter.py  exceptions.py  pyproject.toml  redis_adapter.py  robot.yaml  seed.py  sqlite_adapter.py  workitems_integration.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: publish-to-pypi.yml
devdata/: env-docdb-local-consumer.json  env-docdb-local-reporter.json  env-redis-cluster.json  env-redis-consumer.json  env-redis-producer.json  env-redis-reporter.json  env-redis-sentinel.json  env-redis-test.json  env-sqlite-consumer.json  env-sqlite-for-reporter.json  env-sqlite-producer.json
docs/: # Producer-Consumer Architecture Migrati.md  ADAPTER_RESEARCH_SUMMARY.md  CUSTOM_WORKITEM_ADAPTER_GUIDE.md  PR_CHECKLIST.md  PR_STRATEGY.md  REPOSITORY_MAPPING.md  ROBOCORP_ALIGNMENT.md  TODO.md  YORKO_CONTROL_ROOM_ADAPTER.md
scripts/: check_sqlite_db.py  config.py  diagnose_reporter_issue.py  recover_orphaned_items.py  seed_docdb_db.py  seed_redis_db.py  seed_sqlite_db.py
src/robocorp_adapters_custom/: config.py  workitems_integration.py
workitems_tests/: __init__.py  test_adapters.py
yamls/: conda.yaml  robot.yaml
