[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robocorp-adapters-custom"
version = "1.0.0"
description = "Custom Work Item Adapters for Robocorp Producer-Consumer Automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Josh Yorko", email = "josh@example.com"},
]
keywords = [
    "robocorp",
    "rpa",
    "automation",
    "work-items",
    "adapter",
    "producer-consumer",
    "sqlite",
    "redis",
    "mongodb",
    "documentdb",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

# Core dependencies required for basic functionality
dependencies = [
    "robocorp>=1.0.0",
]

[project.optional-dependencies]
# Redis adapter dependencies
redis = [
    "redis>=5.0.0",
]

# MongoDB/DocumentDB adapter dependencies
mongodb = [
    "pymongo>=4.0.0",
]

# PostgreSQL adapter dependencies (future support)
postgresql = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
]

# All optional adapters
all = [
    "redis>=5.0.0",
    "pymongo>=4.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/joshyorko/robocorp_adapters_custom"
Documentation = "https://github.com/joshyorko/robocorp_adapters_custom/blob/main/README.md"
Repository = "https://github.com/joshyorko/robocorp_adapters_custom"
Issues = "https://github.com/joshyorko/robocorp_adapters_custom/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/robocorp_adapters_custom"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
